# sentiers-aveugles

./: README.md
app/: .eslintrc.cjs  .gitignore  electron.vite.config.mjs  fixDir.js  package.json
app/electron/: main.js  preload.ts
app/src/renderer/: index.html  style.css
app/src/renderer/js/: App.jsx  audioScene.js
app/src/webgl/shaders/: fragment.glsl  vertex.glsl
arduino/: gyro.ino
kinect/: .gitignore  CMakeLists.txt  CONTRIB  main.c  sentiers-aveugles
